--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -1,6 +1,8 @@
 <nav>
+    <div class="title">毛哥EM資訊密技</div>
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/tags">Tags</a></li>
     </ul>
+    <div class="right"></div>
 </nav>
