--- a/static/old.css
+++ b/static/old.css
@@ -12,26 +12,11 @@ body {
 
 a {
     text-decoration: none;
-    color: #5f87ff;
-    position: relative;
+    color: #000;
 }
 
-a::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background-color: #5f87ff;
-    transform: scaleX(0);
-    transform-origin: right;
-    transition: transform 0.3s;
-}
-
-a:hover::after {
-    transform: scaleX(1);
-    transform-origin: left;
+a:hover {
+    text-decoration: underline;
 }
 
 nav {
@@ -124,6 +109,7 @@ article .hero::before {
     display: block;
     padding-bottom: 100%;
 } */
+
 
 article .info {
     padding: 1rem 2rem;
