--- a/static/style.css
+++ b/static/style.css
@@ -4,11 +4,17 @@
     box-sizing: border-box;
 }
 
+.home-page {
+    display: none;
+}
+
 :root {
-    --primary-color: #5f87ff;
+    --dark-purple: #8b9bcc;
+    --light-purple: #dae1f8;
+    --blue: var(--blue);
     --black: #363636;
     --background-color: #f2f4f8;
-    --border: solid 1px #dae1f8;
+    --border: solid 1px var(--light-purple);
     --border-radius: 1.875rem;
 }
 
@@ -22,7 +28,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #5f87ff;
+    color: var(--blue);
     position: relative;
 }
 
@@ -33,7 +39,7 @@ a::after {
     left: 0;
     width: 100%;
     height: 1px;
-    background-color: #5f87ff;
+    background-color: var(--blue);
     transform: scaleX(0);
     transform-origin: right;
     transition: transform 0.3s;
@@ -48,12 +54,15 @@ nav {
     position: fixed;
     width: 100%;
     padding: 1rem 3rem;
-    border-bottom: 1px solid #dae1f8;
+    border-bottom: 1px solid var(--light-purple);
+    background-color: #f2f4f88c;
+    backdrop-filter: blur(10px);
     display: flex;
     align-items: center;
-    height: 5.5rem;
+    height: 4.5rem;
     justify-content: space-between;
     font-size: 1.3125rem;
+    z-index: 1000;
 }
 nav > * {
     flex: 1;
@@ -78,9 +87,14 @@ nav ul {
     text-align: center;
 }
 
-nav a {
+nav a,
+.home-page a {
     color: var(--black);
     cursor: pointer;
+}
+
+.home-page a::after {
+    display: none;
 }
 
 nav a::after {
@@ -94,7 +108,8 @@ nav a::after {
     gap: 1.5rem;
 }
 .main-container {
-    padding-top: 5.5rem;
+    padding-top: 4.5rem;
+    position: relative;
 }
 
 nav label {
@@ -106,7 +121,7 @@ nav label {
 }
 
 .right img:hover {
-    color: #5f87ff;
+    color: var(--blue);
     scale: 1.1;
 }
 nav input[type="search"] {
@@ -120,7 +135,7 @@ nav input[type="search"] {
 }
 nav input[type="search"]:focus {
     outline: none;
-    border-color: #5f87ff;
+    border-color: var(--blue);
 }
 
 nav input[type="checkbox"] {
@@ -133,9 +148,9 @@ nav input[type="checkbox"] {
     border: 1px solid var(--black);
 }
 
-header {
+.home-page header {
     display: flex;
-    gap: 1.5rem;
+    gap: 1rem;
     width: 100%;
     padding: 1.5rem;
 }
@@ -160,7 +175,7 @@ header {
 
 #header-playground,
 .header-right {
-    height: min(100vh, 35rem);
+    height: min(calc(100vh - 7.5rem), 35rem);
 }
 
 #header-playground,
@@ -209,7 +224,7 @@ header {
     font-size: 1.125rem;
     border-radius: calc(var(--border-radius) / 30 * 19);
 }
-.header-categories-item {
+a.header-categories-item {
     color: #fff;
 }
 .header-categories .header-categories-item:first-child {
@@ -253,8 +268,8 @@ main {
     display: flex;
     gap: 1rem;
     width: 100%;
-    max-width: 976px;
-    padding: 1rem;
+    max-width: 992px;
+    padding: 0 1rem;
     margin: 0 auto;
     line-height: 1.5;
 }
@@ -262,10 +277,15 @@ section {
     flex: 1;
     width: calc(100% - min(50vw, 20rem));
 }
-aside > * {
+#recent,
+#tags,
+#time,
+.about,
+.discord-join {
     margin-bottom: 1rem;
     border-radius: var(--border-radius);
     border: var(--border);
+    padding: 1.6rem;
 }
 .about {
     padding: 1.75rem 1.6rem 0;
@@ -322,31 +342,92 @@ aside > * {
     width: 2rem;
 }
 
-.github-join {
+.discord-join {
     color: #8b9bcc;
     font-weight: 700;
+    position: relative;
     padding-block: 1rem;
     background: linear-gradient(253deg, #eef -7.84%, #dfdfff 105.14%);
 }
-.github-join p {
+.discord-join p {
     max-width: 8rem;
     line-height: 1.4;
 }
-#categories {
-    height: 4rem;
-    overflow: hidden;
+
+.discord-float {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.discord-join .discord-float:first-child {
+    width: 2.95744rem;
+    bottom: 2.85rem;
+    right: 1.87rem;
+    transform: rotate(-12.784deg);
+}
+.discord-join .discord-float:nth-child(2) {
+    width: 1.52425rem;
+    bottom: 1.78rem;
+    right: 0.97rem;
+    transform: rotate(16.041deg);
+    filter: blur(1px);
+}
+.discord-join .discord-float:nth-child(3) {
+    width: 1.21494rem;
+    bottom: 0.36rem;
+    right: 1.39rem;
+    transform: rotate(-23.709deg);
+    filter: blur(2px);
+}
+
+.categories {
+    height: 3rem;
     border-radius: var(--border-radius);
     background: #fff;
     margin-bottom: 1rem;
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    padding-inline: 2rem;
     width: 100%;
     overflow-x: scroll;
-    white-space: nowrap;
+    position: relative;
+    font-size: 0.9rem;
+    font-weight: 700;
 }
-#categories a {
+
+#categories {
+    display: flex;
+    padding-inline: 2rem;
+    align-items: center;
+    gap: 2rem;
+    white-space: nowrap;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.categories::before {
+    content: "";
+    border-radius: 7px;
+    width: 5.5em;
+    height: 2rem;
+    background: var(--light-purple);
+    position: absolute;
+    transform: translateY(-50%);
+    left: 5.72em;
+    top: 50%;
+}
+
+.categories-right {
+    content: "";
+    width: 5rem;
+    height: 100%;
+    background: linear-gradient(90deg, #ffffff00, #fff);
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.categories a {
     color: var(--black);
 }
 #posts {
@@ -367,32 +448,159 @@ article .hero {
 
 article .info {
     border-radius: 0 0 1.875rem 1.875rem;
-    padding: 1rem 2rem;
+    padding: 1.5rem;
     border: var(--border);
     border-top: none;
+    font-size: 0.8rem;
+    background-color: #fff;
 }
 
+.post-categories {
+    font-weight: 600;
+    margin-bottom: 0.2rem;
+}
+.tags {
+    font-weight: 600;
+}
+.tags a::before {
+    content: "#";
+    color: #a1a1a1;
+}
 h3 {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.2rem;
 }
 
 aside {
     width: min(50vw, 20rem);
 }
 
-aside > div {
-    border: var(--border);
-    margin-bottom: 1rem;
-    padding: 1.6rem;
+#recent,
+#tags {
+    color: var(--dark-purple);
+    padding-bottom: 0;
+}
+
+.sticky {
+    position: sticky;
+    top: 5.5rem;
+}
+
+#recent h2,
+#tags h2 {
+    font-size: 1.375rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+}
+#recent h3 {
+    padding-block: 0.6rem;
+    line-height: 1.2;
+    border-bottom: 1px solid var(--dark-purple);
+}
+
+#recent h3:last-child {
+    border-bottom: none;
+}
+#recent a,
+#tags a {
+    color: var(--dark-purple);
+    font-weight: 500;
 }
 #tags > a {
+    display: inline-flex;
+    align-items: center;
+    margin: 0 0.5rem 0.5rem 0;
+    background-color: var(--light-purple);
+    padding: 0.3rem 0.5rem;
+    border-radius: 0.3rem;
+}
+#tags > a > div {
     display: inline-block;
-    margin-right: 1rem;
+    background-color: var(--dark-purple);
+    border-radius: 1000px;
+    color: #fff;
+    font-size: 0.7em;
+    font-weight: 400;
+    padding: 0.1rem 0.3rem;
+    margin-left: 0.3rem;
+}
+
+#time {
+    padding-inline: 3rem;
+    background-color: #d2d4d6;
+    border: none;
+    position: relative;
+}
+
+#time::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 5.1875rem;
+    height: 5.1875rem;
+    background: url("/static/img/clock.svg") no-repeat bottom right / contain;
+}
+#time h2 {
+    font-size: 1rem;
+    text-align: center;
+    font-weight: 400;
+}
+#time p {
+    font-size: 1.5rem;
+    text-align: center;
+    font-weight: 700;
 }
 footer {
     display: flex;
-    justify-content: center;
     align-items: center;
+    margin-bottom: 1rem;
+    border-radius: var(--border-radius);
+    border: var(--border);
+    width: 100%;
+    max-width: calc(992px - 2rem);
+    margin: 1rem auto;
+    padding: 1.5rem;
+    color: #545454;
+    font-size: 0.9rem;
+}
+footer .logo {
     height: 4rem;
-    background-color: #e8e8e8;
+    margin-right: 1.5rem;
+    filter: invert(91%) sepia(5%) saturate(1421%) hue-rotate(194deg)
+        brightness(99%) contrast(96%);
+}
+
+.footer-text {
+    flex: 1;
+}
+.footer-social {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+}
+.footer-social img {
+    width: 1.375rem;
+}
+
+.copyright {
+    margin-bottom: 0.3rem;
+}
+
+/* post page */
+
+.post-page header {
+    padding-top: 3rem;
+}
+
+.post-content {
+    padding: 2rem;
+}
+
+.post-content img {
+    max-width: 450px;
+    max-height: 450px;
+    display: block;
+    margin: 0 auto;
+    width: 100%;
 }
